--- a/PY1 IDE sql/PY1 IDE sql.csproj
+++ b/PY1 IDE sql/PY1 IDE sql.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Analizadores\Parser_201709144.cs" />
     <Compile Include="Analizadores\Scaneer_201709144.cs" />
     <Compile Include="Clase\Archivo.cs" />
+    <Compile Include="Clase\ColumnaTabla.cs" />
+    <Compile Include="Clase\Tabla.cs" />
     <Compile Include="Clase\Token.cs" />
     <Compile Include="Clase\TokenErrores.cs" />
     <Compile Include="Form1.cs">
