--- a/PY1 IDE sql/PY1 IDE sql.csproj
+++ b/PY1 IDE sql/PY1 IDE sql.csproj
@@ -86,6 +86,7 @@
     <EmbeddedResource Include="Ventanas\AcercaDe.resx">
       <DependentUpon>AcercaDe.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
